--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,16 +14,7 @@
             th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
             rel="stylesheet" />
     <!-- Custom style -->
-    <link th:href="@{/styles.css}" rel="stylesheet" />
-
-    <style rel="stylesheet">
-        .main-content {
-            margin-top: 70px;
-            border: 2px solid green;
-            padding: 20px;
-        }
-    </style>
-
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"
             th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
