Minified css and javascript using yuicompressor-maven-plugin done

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -30,6 +30,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script th:src="@{/js/index.js}"></script>
 </head>
 <body>
 
